<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/requires_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:orientation="vertical"

       >
        <TextView
            android:id="@+id/info_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"


            android:textSize="24sp"
            android:text="Start Configuration"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            card_view:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:background="@color/cardviewbg"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:id="@+id/wifiSettingbtnlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:orientation="vertical"
                android:padding="10dp"
                >

                   <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                       >

                    <!--Text View for Displaying SIGN IN Text At Top of UI-->

                       <ImageView
                           android:id="@+id/router"
                           android:layout_width="80dp"
                           android:layout_height="80dp"
                           android:layout_alignParentTop="true"
                           android:layout_alignParentLeft="true"

                           android:src="@drawable/ic_router" />


                       <TextView android:id="@+id/configure_text"
                           android:layout_width="170dp"
                           android:layout_height="wrap_content"
                           android:text="@string/router_configure"
                           android:layout_alignParentRight="true"
                           android:layout_alignParentTop="true"
                           android:paddingLeft="3dp"
                           android:fontFamily="@string/font_family_condensed"
                           android:layout_toRightOf="@+id/router"
                           android:textSize="18sp"
                           android:textStyle="bold"
                           />

                       <TextView android:id="@+id/configure_text_des"
                           android:layout_width="170dp"
                           android:layout_height="wrap_content"
                           android:text="@string/router_configure_des"
                           android:layout_alignParentRight="true"
                           android:fontFamily="@string/font_family_condensed"
                          android:paddingTop="20dp"
                           android:paddingRight="10dp"
                           android:textSize="18sp"
                           android:layout_toRightOf="@+id/router"
                           android:layout_below="@+id/configure_text"
                           />



                </RelativeLayout>






            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:background="@color/cardviewbg"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:id="@+id/wificonfiguredlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <!--Text View for Displaying SIGN IN Text At Top of UI-->

                    <ImageView
                        android:id="@+id/no_wifi_setting"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/ic_door_open" />


                    <TextView android:id="@+id/no_configure_text"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/already_router_configure"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:paddingRight="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/no_wifi_setting"
                        android:fontFamily="@string/font_family_condensed"
                        />

                    <TextView android:id="@+id/no_configure_text_des"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/door_description"
                        android:layout_alignParentRight="true"
                        android:paddingTop="20dp"
                        android:paddingRight="10dp"
                        android:fontFamily="@string/font_family_condensed"
                        android:textSize="18sp"
                        android:layout_toRightOf="@+id/no_wifi_setting"
                        android:layout_below="@+id/no_configure_text"
                        />



                </RelativeLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>